# media_structurer

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER_DEPLOYMENT.md  DUPLICATE_DETECTION.md  Dockerfile  README.md  calculate_hashes.py  config.py  config.toml  config.tricc.toml  delete_smaller_duplicates.py  deploy-and-restart.sh  deploy.sh  docker-compose.yml  duplicate_detection_db.py  duplicates_report_clean.csv  exif_dashboard.py  exif_dashboard_streamlit.py  find_duplicates.py  hash_calculator.py  imagetools.py  logger.py  main.py  pyproject.toml  test.py  write_date_to_exif.py
